# Snake_game_Pygame

./: .gitignore  README.md  main.py  pyproject.toml
game/: fruit.py  manager.py  snake.py
