[project]
name = "snake-game-pygame"
version = "0.1.0"
description = "The famous game of Snake implemented in Python with Pygame!"
authors = [
    {name = "Sebastian",email = "sebas.morera999@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygame (>=2.6.1,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
